@@ -38,6 +38,7 @@ Minor features
  * Increased size of Save button on site settings (Liam Brenner)
  * Optimised Site.find_for_request to only perform one database query (Matthew Downey)
  * Notification messages on creating / editing sites now include the site name if specified (Chris Rogers)
+ * Added ``--schema-only`` option to ``update_index`` management command
 
 Bug fixes
 ~~~~~~~~~
